WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217347
Break reference cycle with NSURLSessionDataTask in NetworkDataTaskCocoa
https://bugs.webkit.org/show_bug.cgi?id=217347
Summary
Break reference cycle with NSURLSessionDataTask in NetworkDataTaskCocoa
Sihui Liu
Reported
2020-10-05 15:43:46 PDT
...
Attachments
Patch
(3.07 KB, patch)
2020-10-05 15:45 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-10-05 15:44:13 PDT
rdar://problem/69483575
Sihui Liu
Comment 2
2020-10-05 15:45:40 PDT
Created
attachment 410574
[details]
Patch
Geoffrey Garen
Comment 3
2020-10-05 15:55:48 PDT
Comment on
attachment 410574
[details]
Patch r=me
EWS
Comment 4
2020-10-05 20:03:52 PDT
Committed
r268030
: <
https://trac.webkit.org/changeset/268030
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410574
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug