Cherry-pick r268030. rdar://problem/70010322

Break reference cycle with NSURLSessionDataTask in NetworkDataTaskCocoa
    https://bugs.webkit.org/show_bug.cgi?id=217347
    <rdar://problem/69483575>

    Reviewed by Geoffrey Garen.

    * NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
    (WebKit::NetworkDataTaskCocoa::applyCookiePolicyForThirdPartyCNAMECloaking):

    Canonical link: https://commits.webkit.org/230129@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268030 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.204@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@268062 268f45cc-cd09-0410-ab3c-d52691b4dbfc